tools/crates/vendor/toml_edit/tests/fixtures/invalid/local-date/no-leads.stderr
TOML parse error at line 2, column 17
  |
2 | no-leads = 1987-7-05
  |                 ^
invalid date-time
